# Client-server

./: README.md
.github/workflows/: main.yml
client/: CMakeLists.txt  ClientTest  Makefile  client.cpp  client.h  client.pro  client.ui  main.cpp  moc_client.cpp  test_client.cpp  test_client.h  test_client.pro
client/encryption/: hamming.cpp  hamming.h
client/tests/: CMakeLists.txt  client_tests.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.h  server.pro
